# aument-cpp

./: README.md  build.sh  clang_format.py  install.sh  meson.build
src/: aument.hpp  export_fn.hpp  extern_module.hpp  value.hpp
tests/: module.cpp  test.au
